[package]
name = "rfc2047"
version = "0.1.0"
authors = ["Vincent Breitmoser <look@my.amazin.horse>", "Nora Widdecke <mail@nora.pink>"]
edition = "2018"
license = "MIT"
description = "A simple encoder for RFC2047 encoded words"
repository = "https://github.com/Valodim/rust-rfc2047"
keywords = ["rfc2047", "mail", "encoder"]
readme = "readme.md"

[dependencies]
# no deps! woop woop
